; ModuleID = '/home/carl/AnghaBench/RetroArch/cores/libretro-ffmpeg/extr_ffmpeg_core.c_append_attachment.c'
source_filename = "/home/carl/AnghaBench/RetroArch/cores/libretro-ffmpeg/extr_ffmpeg_core.c_append_attachment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attachment = type { i64, i32* }

@attachments = common dso_local global %struct.attachment* null, align 8
@attachments_size = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @append_attachment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_attachment(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.attachment*, %struct.attachment** @attachments, align 8
  %6 = load i32, i32* @attachments_size, align 4
  %7 = add nsw i32 %6, 1
  %8 = sext i32 %7 to i64
  %9 = mul i64 %8, 16
  %10 = trunc i64 %9 to i32
  %11 = call i64 @av_realloc(%struct.attachment* %5, i32 %10)
  %12 = inttoptr i64 %11 to %struct.attachment*
  store %struct.attachment* %12, %struct.attachment** @attachments, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @av_malloc(i64 %13)
  %15 = inttoptr i64 %14 to i32*
  %16 = load %struct.attachment*, %struct.attachment** @attachments, align 8
  %17 = load i32, i32* @attachments_size, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.attachment, %struct.attachment* %16, i64 %18
  %20 = getelementptr inbounds %struct.attachment, %struct.attachment* %19, i32 0, i32 1
  store i32* %15, i32** %20, align 8
  %21 = load i64, i64* %4, align 8
  %22 = load %struct.attachment*, %struct.attachment** @attachments, align 8
  %23 = load i32, i32* @attachments_size, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.attachment, %struct.attachment* %22, i64 %24
  %26 = getelementptr inbounds %struct.attachment, %struct.attachment* %25, i32 0, i32 0
  store i64 %21, i64* %26, align 8
  %27 = load %struct.attachment*, %struct.attachment** @attachments, align 8
  %28 = load i32, i32* @attachments_size, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.attachment, %struct.attachment* %27, i64 %29
  %31 = getelementptr inbounds %struct.attachment, %struct.attachment* %30, i32 0, i32 1
  %32 = load i32*, i32** %31, align 8
  %33 = load i32*, i32** %3, align 8
  %34 = load i64, i64* %4, align 8
  %35 = call i32 @memcpy(i32* %32, i32* %33, i64 %34)
  %36 = load i32, i32* @attachments_size, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* @attachments_size, align 4
  ret void
}

declare dso_local i64 @av_realloc(%struct.attachment*, i32) #1

declare dso_local i64 @av_malloc(i64) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
